apps/pattern-lab--workshop/src/styles/_docs.scss
@import '@bolt/core';

.bolt-docs {
  &__schema {
    ul {
      p {
        display: inline-block;
        margin: 0;
      }

      code {
        font-weight: normal;
      }

      details {
        cursor: pointer;
        summary {
          font-weight: bold;
          user-select: none;
          &:focus {
            outline: none;
          }
        }
        &,summary {
          margin: 0;
        }
      }
    }
  }
}



.c-bolt-docs {
  display: -ms-grid;
  display: grid;

  -ms-grid-rows: bolt-spacing(large) auto auto 1fr bolt-spacing(large);
  grid-template-rows: bolt-spacing(large) auto auto 1fr bolt-spacing(large);


  -ms-grid-columns: 1fr 90% 1fr;
  grid-template-columns: 1fr 90% 1fr;

  max-width: 1440px;
  margin: 0 auto;

  @include respond-to(medium) {
    -ms-grid-columns: 1fr 17.5% 65% 17.5% 1fr;
    grid-template-columns: 1fr 17.5% 65% 17.5% 1fr;
  }
}

.c-bolt-docs__page-content {
  grid-column: 2/span 1;
  grid-row: 3/span 1;
  min-width: 0;

  @include respond-to(medium) {
    grid-row: 3/span 1;
    grid-column: 3/span 1;
    @include bolt-padding-left(medium);
    @include bolt-padding-right(medium);
  }
}


.c-bolt-docs__page-nav {
  grid-row: 2/span 1;
  grid-column: 2/span 1;
  text-align: right;

  @include respond-to(medium) {
    grid-row: 3/span 1;
    grid-column: 4/span 2;
    text-align: left;
  }
}

* + pre {
  @include bolt-margin-top(small);
}

pre {
  @include bolt-font-family(code);
  @include bolt-font-size(small);
  @include bolt-padding(small);
  white-space: pre-wrap;
  background-color: rgba(bolt-color(black), 0.05);
  border-radius: 4px;


  // Override highlightjs default styling
  .hljs {
    @include bolt-padding(0);
    background-color: transparent;
  }
}



.c-bolt-docs__page-nav__link {
  @include bolt-font-size(small);
}


.c-bolt-docs__title {
  @include bolt-font-size(xxlarge);
  @include bolt-font-weight(semibold); // font-size: 24px;
  @include bolt-margin-bottom(medium);
  color: #222;
}

.c-bolt-docs__lead {
  @include bolt-font-weight(regular);
  // font-size: 24px;
  // line-height: 1.5;
  // font-weight: 300;
  border: 1px dotted transparent;
  border-radius: 4px;
  color: #222;
  margin: -13px;
  padding: 13px;
  transition: border 0.3s ease-in-out;

  &.edit-this-readme {
    border: 1px dotted var(--bolt-theme-primary);
  }

  pre:last-child {
    margin-bottom: 0;
  }
}

.c-bolt-site {
  display: block;
}



.c-bolt-docs-table {
  background-image: -webkit-linear-gradient(left, #fff, hsla(0, 0%, 100%, 0)),
  -webkit-linear-gradient(right, #fff, hsla(0, 0%, 100%, 0)),
  -webkit-linear-gradient(left, #eaf0f6, rgba(234, 240, 246, 0)),
  -webkit-linear-gradient(right, #eaf0f6, rgba(234, 240, 246, 0));
  // background-image: -webkit-linear-gradient(left, bolt-color(white), bolt-color(black)),
  // -webkit-linear-gradient(right, bolt-color(white), bolt-color(black)),
  // -webkit-linear-gradient(left, bolt-color(gray, xlight), bolt-color(gray, xdark)),
  // -webkit-linear-gradient(right, bolt-color(gray, xlight), bolt-color(gray, xdark));

  // background-image: linear-gradient(left, bolt-color(white), bolt-color(black)),
  //   linear-gradient(right, bolt-color(white), bolt-color(black)),
  //   linear-gradient(left, bolt-color(gray, xlight), bolt-color(gray, xdark)),
  //   linear-gradient(right, bolt-color(gray, xlight), bolt-color(gray, xdark));


  background-color: bolt-color(white);

  -ms-overflow-style: -ms-autohiding-scrollbar;
  -webkit-overflow-scrolling: touch;

  background-attachment: local,local,scroll,scroll;
  background-position: 0 0,100% 0,0 0,100% 0;
  background-repeat: no-repeat;
  background-size: 4em 100%, 4em 100%, 1em 100%, 1em 100%;
  overflow-x: auto;
  overflow-y: hidden;
  border-radius: $bolt-border-radius;

  table {
    @include bolt-font-size(small);
    @include bolt-font-family(code);
    @include bolt-margin-bottom(0);
    table-layout: auto;
    border: 1px solid bolt-color(gray, light);
    width: 100%;
    transform: translate3d(0, 0, 0);
    // table-layout: fixed;
    // border-radius: $bolt-border-radius;
  }

  thead {
    border-bottom: 1px solid bolt-color(gray, light);
  }

  tr {
    transition: background-color 0.1s ease;

    &:hover {
      background-color: rgba(bolt-color(gray, xlight), 0.5);
    }
  }

  th {
    @include bolt-padding(small);
    @include bolt-font-size(xsmall);
    @include bolt-font-weight(semibold);
    text-align: left;
    color: bolt-color(gray, dark);
    background-color: bolt-color(gray, xlight);
    text-transform: uppercase;
    vertical-align: bottom;
  }

  td {
    @include bolt-padding(small);
    vertical-align: top;

    .required-key {
      color: red;
    }
  }
}

.c-bolt-docs-table__row {
  border-top: 1px solid bolt-color(gray, light);
}

.c-bolt-docs-table__col--key {
  font-weight: 600;
}

.c-bolt-docs-table .c-bolt-docs-table {
  overflow: hidden; // Prevent nested tables from scrolling to keep things from getting too crazy
}



.c-bolt-docs__heading-fragment a {
  display: block;
  margin-left: bolt-spacing(medium) * -1;

  &:before {
    float: left;
    content: '#';
    font-size: 1em;
    text-align: center;
    width: bolt-spacing(medium);
    color: inherit;
  }
}

